--- a/ueventd.rc
+++ b/ueventd.rc
@@ -2,5 +2,7 @@
 /dev/rfkill               0660   bluetooth  bluetooth
 /dev/vcio                 0660   system     bluetooth
 /dev/ion                  0664   system     system
-/dev/video0               0660   system     camera
-/dev/video1               0660   system     camera
+/dev/video*               0660   system     camera
+/dev/media*               0660   system     camera
+/dev/v4l-subdev*          0660   system     camera
+/dev/dma_heap/linux,cma   0666   system     graphics
